using tika to extract mimeType